--- a/PROFILE.html
+++ b/PROFILE.html
@@ -40,7 +40,7 @@ li a:hover:not(.active) {
 <ul>
   <li><a href="CAREER.html">CAREER</a></li>
   <li><a href="TRAVEL.HTML">TRAVEL</a></li>
-  <li><a class="active" href="">PROFILE</a></li>
+  <li><a class="active" href="PROFILE.html">PROFILE</a></li>
 </ul>
 
 <style>
