--- a/PROFILE.html
+++ b/PROFILE.html
@@ -39,7 +39,7 @@ li a:hover:not(.active) {
 
 <ul>
   <li><a href="CAREER.html">CAREER</a></li>
-  <li><a href="TRAVEL.HTML">TRAVEL</a></li>
+  <li><a href="TRAVEL.html">TRAVEL</a></li>
   <li><a class="active" href="PROFILE.html">PROFILE</a></li>
 </ul>
 
